# VideoSage

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
app/embeddings/: embedding_model.py
app/ingestion/: audio_extractor.py  file_loader.py  youtube_loader.py
app/llm/: mistral_client.py
app/rag/: chunker.py  rag_pipeline.py  retriever.py
app/services/: query_service.py  summary_service.py
app/transcription/: whisper_transcriber.py
app/translation/: translator.py
app/vectordb/: chroma_store.py
