[project]
name = "videosage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "deep-translator>=1.11.4",
    "ffmpeg-python>=0.2.0",
    "fpdf2>=2.7.9",
    "huggingface-hub>=0.23.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-mistralai>=0.1.0",
    "mistralai>=0.4.0",
    "numpy>=1.26.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "streamlit-extras>=0.4.0",
    "tiktoken>=0.7.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
    "yt-dlp>=2024.4.9",
]
